// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for type: number, hideLabel: { base: true, xs: false, s: true, m: false, l: true, xl: false }, state: success, isDisabled: false, theme: light 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
input {
  height: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) !important;
  margin: 0 !important;
  outline: 0 !important;
  text-align: center !important;
  width: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #197E10 !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #010205 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  -moz-appearance: textfield !important;
}
input::-webkit-inner-spin-button {
  display: none !important;
}
input:focus {
  border-color: #010205 !important;
}
input:disabled {
  cursor: not-allowed !important;
  color: #949598 !important;
  border-color: #949598 !important;
  -webkit-text-fill-color: #949598 !important;
}
::slotted(input) {
  position: absolute !important;
  height: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) !important;
  width: 0 !important;
  opacity: 0 !important;
}
.pin-code-container {
  display: flex;
  gap: 8px;
  justify-content: start;
  flex-wrap: wrap;
}
@media(hover:hover) {
  input:not(:disabled):not(:focus):not([readonly]):hover {
    border-color: #0E4809 !important;
  }
}

.label {
  display: flex;
  flex-direction: column;
  gap: 4px;
  position: relative;
}
.label__text {
  display: block;
  position: absolute;
  width: 0;
  height: 1px;
  text-indent: -999999px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #197E10;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(min-width:480px) {
  .label__text {
    position: static;
    width: fit-content;
    height: auto;
    text-indent: 0;
  }
}

@media(min-width:760px) {
  .label__text {
    position: absolute;
    width: 0;
    height: 1px;
    text-indent: -999999px;
  }
}

@media(min-width:1000px) {
  .label__text {
    position: static;
    width: fit-content;
    height: auto;
    text-indent: 0;
  }
}

@media(min-width:1300px) {
  .label__text {
    position: absolute;
    width: 0;
    height: 1px;
    text-indent: -999999px;
  }
}

@media(min-width:1760px) {
  .label__text {
    position: static;
    width: fit-content;
    height: auto;
    text-indent: 0;
  }
}

@media(hover:hover) {
  .label__text:hover~::slotted(input:not(:disabled):not(:focus):not([readonly])), .label__text:hover ::slotted(input:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #0E4809 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for type: number, hideLabel: false, state: none, isDisabled: false, theme: light 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
input {
  height: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) !important;
  margin: 0 !important;
  outline: 0 !important;
  text-align: center !important;
  width: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #6B6D70 !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #010205 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  -moz-appearance: textfield !important;
}
input::-webkit-inner-spin-button {
  display: none !important;
}
input:focus {
  border-color: #010205 !important;
}
input:disabled {
  cursor: not-allowed !important;
  color: #949598 !important;
  border-color: #949598 !important;
  -webkit-text-fill-color: #949598 !important;
}
::slotted(input) {
  position: absolute !important;
  height: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) !important;
  width: 0 !important;
  opacity: 0 !important;
}
.pin-code-container {
  display: flex;
  gap: 8px;
  justify-content: start;
  flex-wrap: wrap;
}
@media(hover:hover) {
  input:not(:disabled):not(:focus):not([readonly]):hover {
    border-color: #010205 !important;
  }
}

.label {
  display: flex;
  flex-direction: column;
  gap: 4px;
  position: relative;
}
.label__text {
  display: block;
  position: static;
  width: fit-content;
  height: auto;
  text-indent: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(hover:hover) {
  .label__text:hover~::slotted(input:not(:disabled):not(:focus):not([readonly])) {
    border-color: #010205 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for type: password, hideLabel: true, state: error, isDisabled: true, theme: dark 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
input {
  height: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) !important;
  margin: 0 !important;
  outline: 0 !important;
  text-align: center !important;
  width: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #FC4040 !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #FBFCFF !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
}
input::-webkit-inner-spin-button {
  display: none !important;
}
input:focus {
  border-color: #FBFCFF !important;
}
input:disabled {
  cursor: not-allowed !important;
  color: #7E7F82 !important;
  border-color: #7E7F82 !important;
  -webkit-text-fill-color: #7E7F82 !important;
}
::slotted(input) {
  position: absolute !important;
  height: calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2) !important;
  width: 0 !important;
  opacity: 0 !important;
}
.pin-code-container {
  display: flex;
  gap: 8px;
  justify-content: start;
  flex-wrap: wrap;
}
@media(hover:hover) {
  input:not(:disabled):not(:focus):not([readonly]):hover {
    border-color: #FB0404 !important;
  }
}

.label {
  display: flex;
  flex-direction: column;
  gap: 4px;
  position: relative;
}
.label__text {
  display: block;
  position: absolute;
  width: 0;
  height: 1px;
  text-indent: -999999px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #7E7F82;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FC4040;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(hover:hover) {
  .label__text:hover~::slotted(input:not(:disabled):not(:focus):not([readonly])), .label__text:hover ::slotted(input:not(:disabled):not(:focus):not([readonly]):hover) {
    border-color: #FB0404 !important;
  }
}
"
`;
